css/media.css
@media only screen and (min-width: 992px){
    .contact-details{
        justify-content: space-between;
    }
}
@media only screen and (max-width: 1245px){
    .sanctioned-slide .container{
        max-width: 100%;
    }
    .sanctioned{
        right: 100px;
    }
    .slider-copyright-text{
        right: 24px;
    }
}
@media only screen and (max-width: 1100px){
    .full_width{
        width: 100% !important;
    }
}
@media only screen and (max-width: 1024px){
    .info{
        padding-top: 12px;
    }
    .padd_sett{
        padding: 5px;
    }.pos_rel{
        padding-left: 33px !important;
    }.quote_left::before{
        top: 10px;
        left: 1px;
    }.quote_left::after{
        top: 72px;
        left: 66px;
    }    
}

@media only screen and (max-width: 991px){
    .custom-header .navbar-nav .nav-item .nav-link{
        margin-left: 0;
        padding: 10px 0;
        border-bottom: 1px solid #1F496A;
    }
    .custom-header .navbar-nav .nav-item .nav-link:hover{
        border-color: inherit;
    }
    .custom-header .navbar-nav .nav-item:last-child .nav-link{
        border-bottom: none;
    }
    .cost-reduce-listing .col-md-2{
        max-width: 33.33%;
        flex: 0 0 33.33%;
    }
    .cost-reduce-listing{
        justify-content: flex-start !important;
    }
    .health-tips {
        max-width: 100%;
        display: flex;
        order: 2;
    }
    .health-tip-title,.health-counter,.health-tip-list {
        max-width: 100%;
    }
    .health-tip-title h4 br,.automated-date .health-counter h4 br{
        display: none;
    }
    .automated-date .col-md-3,.automated-date .col-md-9{
        flex: 0 0 100% !important;
        max-width: 100% !important;
    }
    .margin_set_top_adjust_26 img {
        width: 100%;
    }
    .pad_box_set{
        padding-left: 15px;
    }
    .res_pad_set{
        margin-top: 20px;
    }
    .sign_img{
        width: 25px !important;
    }
    .pad_ul_left{
        padding-left: 15px;
    }.ipad-img-size{
        width: 100%;
    }.pos_rel{
        padding-left: 225px !important;
    }.quote_left::before{
        left: 189px;
    }.quote_left::after{
        top: 67px;
        left: 259px;
    }.custom-header .navbar{
        display: flex;
        flex-direction: row-reverse;
        justify-content: flex-end;
        max-width: 100%;
    }.custom-header .navbar a {
        margin-left: 16rem;
    }.pad_set_adjust {
        padding-right: 15px;
    }.pad_set_adjust_left {
        padding-left: 15px;
    }.margin-bottom_for_ipad_set{
        margin-bottom: 10px;
    }.blog_1_quote_27::before{
        left: 15px;
    }.blog_1_quote_27::after{
        right: 141px;
        top: 15px;
    }.full_width_img_resp{
        width: 100%;
    }.title_set_stop{
        margin-top: 20px;
    }.res_top_margin{
        margin-top: 30px;
    }
}
@media only screen and (max-width: 768px){
    .res_query{
        margin-top: 15px;
    }
    .cost-reduce-listing .col-md-2{
        max-width: 50%;
        flex: 0 0 50%;
    }
    .info{
        padding-top: 20px;  
    }.custom-header .navbar a {
        margin-left: 15rem;
    }.network-provider p{
        font-size: 18px;
        padding: 7px 7px 7px;
    }.slider-title br{
        display: none;
    }.set_content{
        display: inline !important;
        text-align: center;
    }
}
@media only screen and (max-width: 767px){ 
    .main_title_news{
        font-size: 14px;
    }
    .pad_set_adjust{
        padding-right: 15px;
    }
	.pad_set_adjust_left{
        padding-left: 15px;
    }
	.right_text_font{
        padding-left: 0px;
    }
	.content_div_text{
        padding: 15px;
    }
	.title_top_main_set{
        padding: 15px;
    }
	.title_top_main_set h2{
        font-size: 14px;
    }
    .space_adjust_top{
        margin-top: 20px;
    }
    .contact-details{
        flex-wrap: wrap;
        margin-top: 30px;
    }
    .separator-orange-vertical{
        display: none;
    }
    .address-section ul{
        justify-content: center;
    }
    .contact-details img{
        margin: auto auto 30px;
    }
    .address-section,.social-icons{
        width: 100%;
    }
    .social-logos{
        display: flex;
        justify-content: center;
        margin-top: 30px;
    }
    .social-icons img,.social-logos li a{
        margin: 0px;
    }
    .address-section p{
        text-align: center;
    }.border_yellow{
        margin: 27px 0;
    }.solution_top_mar{
        text-align: center;
    }.mob_responsive_media{
        padding-left: 0px;
        padding-right: 0px;
    }.mob_responsive_media .row{
        padding-left: 15px;
        padding-right: 15px;
        margin-right: 0px;
        margin-left: 0px;
    }.img_1_class{
        margin-bottom: 10px;
    }.risk-reduce-title br{
        display: none;
    }.risk-detail{
        justify-content: center;
    }
}
@media only screen and (max-width: 766px){
    .for_mob{
        display: none;
    }
}
@media only screen and (max-width: 600px){
    .last_para,.grey_bg_set,.blue_bg_dark{
     padding: 15px;
    }.pos_rel{
        padding-left: 65px !important;
    }.quote_left::before{
        left: 33px;
    }.quote_left::after{
        left: 99px;
    }.custom-header .navbar a {
        margin-left: 4rem;
    }
 }
@media only screen and (max-width: 500px){
    .cost-reduce-listing .col-md-2{
        max-width: 100%;
        flex: 0 0 100%;
    }
}
@media only screen and (max-width: 460px){
    .blog_1_quote::after{
        top: 111px;
        left: 152px;
    }.blog_1_quote_27::after{
        top: 133px;
        left: 261px;
    }.t_margin_main .title_container{ 
        padding-top: 32px;
        text-align: center;
    }.main_title_solutions{
        margin-bottom: 10px;
    }.t_margin_main .set_bg_dark{
        margin-top: 0px;
        padding-top: 30px;
        padding-bottom: 30px;
        padding-left: 17px;
        padding-right: 17px;
        text-align: center;
    }.t_margin_main .set_bg_dark .container{
        padding: 0px;
    }.t_margin_main .set_bg_dark .container .set_content {
        justify-content: center;
    }.t_margin_main .contact_us{
        margin-top: 17px;
    }.t_margin_main .custom_margin_top{
        margin-top: 17px;
    }.hide_mob{
        display: none;
    }.for_mob{
        width: 100%;
        display: block;
    }.leadership h1{
        text-align: center;
    }.margin-set_top{
        margin-top: 30px;
    }.space_adjust_top{
        text-align: center;
        margin-top: 0px;
        padding-left: 17px;
        padding-right: 17px;
    }.margin-set_top .text_set{
        text-align: center;
    }.margin-set_top .text_color{
        padding-top: 12px;
    }.margin-set_top .text_color_chief{
        margin-bottom: 7px;
    }.top_margin_mobile{
        margin-top: 14px;
    }.advisory_board{
        text-align: center;
        margin-bottom: 0px;
    }.advisory_board .advisory_board-list{
        margin-bottom: 30px;
    }.contact_us h3{
        line-height: 22px;
        letter-spacing: 0.34px;
        font-size: 17px;
    }.contact_us .c-pointer br{
        display: none;
    }.slider-text{
        margin-left: 0px;
    }.slider-title{
        padding: 20px 17px 0px 17px;
        text-align: center;
        letter-spacing: 0.56px;
    }.slider-title br {
        display: none;
    }.separator{
        margin-top: 14.13px;
        margin-bottom: 14px;
    }.network-provider .c-pointer{
        font-size: 17px;
        line-height: 22px;
        letter-spacing: 0.34px;
        padding-top: 18px;
        padding-bottom: 18px;
    }.health-tip-title{
        padding: 0px;
    }.health-tips{
        padding-left: 0;
        padding-top: 27px;
        padding-right: 0px;
    }.health-tip-list{
        margin-left: 0;
    }.health-tip-list .col-md-6{
        margin-bottom: 25px;
    }.cost-reduce{
        padding-top: 39px;
    }.cost-title{
        padding-left: 11px;
        padding-right: 11px;
    }.cost-reduce-listing{
        text-align: center;
        margin-top: 40px;
    }.cost-reduce-listing .col-md-2{
        margin-bottom: 40px;
    }.network-detection h4{
        font-size: 17px;
        line-height: 22px;
    }.automated-date{
        padding: 0px;
    }.automated-date .container{
        padding: 0px;
    }.health-counter h4{
        font-weight: bold;
        text-align: center;
        padding-left: 17PX;
        padding-right: 17PX;
        margin-bottom: 30px;
        margin-top: 30px;
    }.automated-date .risk-reduce-title{
        padding-left: 17px;
        padding-right: 17px;
    }.risk-detail{
        display: inline-grid !important;
        width: 100%;
        text-align: center;
    }.risk-detail img {
        margin: 0 auto;
    }.risk-detail .details-block{
        margin: 0;
        margin-top: 17px;
    }.connect-with-us{
        padding-top: 30px;
        padding-left: 0px;
        padding-right: 0px; 
        padding-bottom: 40px;
    }.connect-with-us .container{
        padding: 0px;
    }.contact-title h4 {
        padding-left: 17px;
        padding-right: 17px;
        text-align: center;
    }.connect-option-selection{
        padding-left: 31px;
        padding-right: 25px;
    }.connect-option-selection ul{
        margin-bottom: 40px;
        margin-top: 40px;
    }.contact-details{
        margin-top: 45px;
    }.contact-details img{
        margin-bottom: 40px;
    }.custom-header .navbar{
        display: flex;
        flex-direction: row-reverse;
        justify-content: flex-end;
    }
}
@media only screen and (min-width: 767px){
    .for_mob{
        display: none;
    }
}
@media only screen and (max-width: 320px){
    .main_title_news{
        font-size: 13px;
    }  
    .bg_set_blue {
        height: 350px !important;
    }
    .main_title_news{
        font-size: 13px;
    }  
    .title_top_main_set h2{
        font-size: 11px;
    }.custom-header .navbar a{
        margin-left: 2rem;
    }.address-section ul{
        flex-wrap: wrap;
    }.pos_rel{
        padding-left: 38px !important;
    }.quote_left::before{
        left: 6px;
    }.quote_left::after{
        left: 72px;
    }.healthcare_box_set::after{
        top: 89px;
        left: 80px;
    }
}

